# HFDP-CPP

./: .gitignore  CMakeLists.txt  README.md
observer/: CMakeLists.txt  main.cc
observer/weather_station/: CMakeLists.txt
observer/weather_station/include/weather_station/: weather_station.h
observer/weather_station/include/weather_station/display/: current_condition_display.cc  current_condition_display.h  display_interface.h
observer/weather_station/include/weather_station/signal/: signal.h
observer/weather_station/include/weather_station/weather_data/: weather_data.cc  weather_data.h
observer/weather_station_book/: CMakeLists.txt
observer/weather_station_book/include/weather_station_book/: weather_station.h
observer/weather_station_book/include/weather_station_book/observer/: forward_declare.h  observable.h  observer.h
observer/weather_station_book/test/: CMakeLists.txt  wss_test.cc
observer/weather_station_standard/: CMakeLists.txt
observer/weather_station_standard/include/weather_station_standard/: weather_station_standard.h
observer/weather_station_standard/include/weather_station_standard/observer/: forward_declare.h  observable.h  observer.h
observer/weather_station_standard/test/: CMakeLists.txt  wss_test.cc
strategy/: CMakeLists.txt  main.cpp
strategy/dynamic_duck/: CMakeLists.txt
strategy/dynamic_duck/include/: dynamic_duck.hpp
strategy/dynamic_duck/include/dynamic_duck/: duck_core.hpp
strategy/dynamic_duck/include/dynamic_duck/duck/: abstract_duck.cc  abstract_duck.cpp  abstract_duck.h  abstract_duck.hpp  mallard_duck.cc  mallard_duck.cpp  mallard_duck.h  mallard_duck.hpp  model_duck.cc  model_duck.cpp  model_duck.h  model_duck.hpp
strategy/dynamic_duck/include/dynamic_duck/fly_behavior/: fly_behavior.h  fly_behavior.hpp  fly_no_way.cc  fly_no_way.cpp  fly_no_way.h  fly_no_way.hpp  fly_rocket_powered.cc  fly_rocket_powered.cpp  fly_rocket_powered.h  fly_rocket_powered.hpp  fly_with_wings.cc  fly_with_wings.cpp  fly_with_wings.h  fly_with_wings.hpp
strategy/dynamic_duck/include/dynamic_duck/interface/: cloneable.h
strategy/dynamic_duck/include/dynamic_duck/quack_behavior/: mute_quack.cc  mute_quack.cpp  mute_quack.h  mute_quack.hpp  quack.cc  quack.cpp  quack.h  quack.hpp  quack_behavior.h  quack_behavior.hpp  squeak.cc  squeak.cpp  squeak.h  squeak.hpp
strategy/static_duck/: CMakeLists.txt
strategy/static_duck/include/: static_duck.h
strategy/static_duck/include/static_duck/duck/: abstract_duck.h  mallard_duck.cc  mallard_duck.h  model_duck.cc  model_duck.h
strategy/static_duck/include/static_duck/fly_behavior/: fly_no_way.cc  fly_no_way.h  fly_rocket_powered.cc  fly_rocket_powered.h  fly_with_wings.cc  fly_with_wings.h
strategy/static_duck/include/static_duck/quack_behavior/: mute_quack.cc  mute_quack.h  quack.cc  quack.h  squeak.cc  squeak.h
